frontend/test/should_pass/nadeem.grg
rule clear_array(ref element_array:array<string>):()
{
	modify {
		eval {
			element_array.clear();
		}
	}
}
