frontend/test/should_fail/subinstantiateandrewrite.grg
pattern Foo
{
	modify {
	}
}

rule memberToPerson 
{
	
	modify {
		foo:Foo();
		foo();
	}
}
